--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <nav class="container-xl navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="#">
                 <i class="fa-solid fa-dice-d20"></i>
-                <span>CyberPortfolio</span>
+                <span>CyberPortfolio123</span>
             </a>
             <!-- hỗ trợ menu màn hình mobile -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#portfolioNav"
@@ -276,9 +276,9 @@
                         5 col => 12/ 5 không chia hết
                         col không có chỉ số (tự chia)
                     BS tự đếm col => 100% / số lượng (5 col) => 20%-->
-                    <!-- row: display flex 
+                        <!-- row: display flex 
                     row-cols-*-* : số lượng cột trên / hàng (row-cols-kích thước màn hình-số cột)-->
-                    <!-- row-cols-2 row-cols-sm-2 row-cols-md-3 row-cols-lg-5 row-cols-xl-5 -->
+                        <!-- row-cols-2 row-cols-sm-2 row-cols-md-3 row-cols-lg-5 row-cols-xl-5 -->
                         <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5 ">
                             <div class="col">
                                 <!-- chỉnh hình vừa thẻ cha => width: 100% 
