--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#">Events</a>
                     </li>
 
                 </ul>
