update code branch nguyen

--- a/index.html
+++ b/index.html
@@ -317,7 +317,11 @@
     </section>
 
 
-    <footer></footer>
+    <footer>
+        <ul class="nguyen">
+            <li>item 1</li>
+        </ul>
+    </footer>
 
 
 
