update code mentor

--- a/index.html
+++ b/index.html
@@ -317,7 +317,13 @@
     </section>
 
 
-    <footer></footer>
+    <footer>
+        <ul>
+            <li>item 2</li>
+        </ul>
+    </footer>
+
+    <a href="#">back to top</a>
 
 
 
